Hopefully the final one

--- a/src/components/Navbar/NavbarMobile.module.css
+++ b/src/components/Navbar/NavbarMobile.module.css
@@ -65,7 +65,7 @@
     background: transparent;
 }
 .searchBarBlack input::placeholder {
-    color: black;
+    color: #676767;
 }
 
 .navbarExpand {
