--- a/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
+++ b/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
@@ -3,13 +3,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 60vh;
+    min-height: 72vh;
     margin: 8px 0;
 }
 
-.header {
+/* .header {
     flex: 1;
-}
+} */
 
 .title {
     font-weight: 600;
@@ -38,8 +38,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 248px;
-    margin: 40px auto;
+    height: 168px;
 }
 .mediaShowcase img {
     max-width: 92%;
@@ -49,7 +48,10 @@
 @media only screen and (min-width: 768px) {
     .mediaShowcase {
         grid-template-columns: repeat(3, 1fr);
-        margin: 40px auto;
+        margin: 0 120px;
+    }
+    .imgContainer {
+        height: 248px;
     }
     
 }
