--- a/src/screens/ListingForm/ListingForm.module.css
+++ b/src/screens/ListingForm/ListingForm.module.css
@@ -50,6 +50,10 @@
     margin: 80px 0;
 }
 
+.formContent {
+    padding: 0 12px;
+}
+
 .formGroup {
     display: flex;
     flex-direction: column;
@@ -137,6 +141,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .formContent {
+        padding: 0 48px;
     }
 }
 
